--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,11 @@
 }
 /* modifies the contents/Projects */
 .projects > .container > .row > div > .content{
-    border: 1px solid black;
+    border-radius: 5px;
     margin: 10px;
+    padding: 10px;
+    -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2); 
+    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.2);
 }
 
 /* to remove the default margin in columns and padding in rows*/
