--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 /* Set some variables*/ 
 :root {
     --pri-col: #0943a6;
     --drk-col: #007dd1;
+    --drk-con: #303030;
+    --drk-bg:black;
   }
-
+body{
+    background: var(--drk-bg);
+}
 /* Modify the backgorund color */ 
 .navbar-custom { 
     border-radius: 0;
@@ -11,13 +16,15 @@
 } 
 /* Modify the navbar brand */ 
 .navbar-brand-custom{ 
-    color: var(--pri-col);
+    font-family: 'Montserrat', sans-serif;
+    color: white;
     text-decoration: none;
     font-size: 1em;
 } 
 /* Modify the jumbotron */ 
 .jumbotron-custom{
-    background: linear-gradient(180deg, rgba(9,62,166,1) 0%, rgba(231,231,231,1) 100%);
+    background: url(../assets/background-content-desktop.jpg);
+    background-size: cover;
     color: white;
 } 
 #navbar-p{
@@ -26,7 +33,8 @@
 
 /* modifies the contents/Projects */
 .projects > .container > .row > a > .content{
-    color:black;
+    background: var(--drk-con);
+    color:white;
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
