--- a/css/style.css
+++ b/css/style.css
@@ -87,5 +87,33 @@ body{
     padding-left: 0;
     padding-right: 0;
 }
+/*media queries*/
+@include media-breakpoint-up(sm) {
 
+  .jumbotron-h1-custom {
 
+   font-size: 1.2rem;
+
+  }
+
+}
+
+@include media-breakpoint-up(md) {
+
+  .jumbotron h1 {
+
+   font-size: 1.4rem;
+
+  }
+
+}
+
+@include media-breakpoint-up(lg) {
+
+   .jumbotron h1 {
+
+    font-size: 1.6rem;
+
+   }
+
+}
