--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,15 @@ body{
     color: white;
     text-decoration: none;
     font-size: 1em;
-} 
+}
 /* Modify the jumbotron */ 
 .jumbotron-custom{
-    background: url(../assets/background-content-desktop.jpg)no-repeat center center fixed;
-
-
-       
-   -webkit-background-size: cover;
-
-   -moz-background-size: cover;
-
-   background-size: cover;
-
-   -o-background-size: cover;
-
+    background: url(../assets/background-content-desktop.jpg)no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    color: white;
 } 
 #navbar-p{
     margin-top: 10px;
@@ -42,6 +36,7 @@ body{
 }
 .jumbotron-h1-custom{
     font-family: 'Montserrat', sans-serif;
+    color: white;
 }
 .btn-custom1{
   width: 80%;
@@ -87,24 +82,34 @@ body{
     padding-left: 0;
     padding-right: 0;
 }
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (max-width: 576px) {
     .jumbotron-h1-custom {
-        font-size: 4em;
+        font-size: .5em;
+    }
+}
+/* Small devices (tablets, less than 768px) */
+@media (max-width: 767px) {
+    .jumbotron-h1-custom {
+        font-size: 1em;
+    }
+}
+/* Small devices (tablets, 768px and up) */
+@media (max-width: 992px) {
+    .jumbotron-h1-custom {
+        font-size: 1em;
     }
 }
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {
+@media (max-width: 1200px) {
     .jumbotron-h1-custom {
-        font-size: 6em;
+        font-size: 2em;
     }
 }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+@media (min-width: 1201px) {
     .jumbotron-h1-custom {
-        font-size: 8em;
+        font-size: 4em;
     }
 }
