--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body{
 .navbar-custom { 
     border-radius: 0;
     margin: 0;
+    background: black;
 } 
 /* Modify the navbar brand */ 
 .navbar-brand-custom{ 
@@ -21,6 +22,7 @@ body{
     text-decoration: none;
     font-size: 1em;
 }
+
 /* Modify the jumbotron */ 
 .jumbotron-custom{
     background: url(../assets/background-content-desktop.jpg)no-repeat center center;
