--- a/css/style.css
+++ b/css/style.css
@@ -85,18 +85,35 @@ body{
     padding-right: 0;
 }
 @media (max-width: 576px) {
+    .jumbotron-custom{
+        background: url(../assets/background-content-phone.jpg)no-repeat center center;
+    }
     .jumbotron-h1-custom {
         font-size: .5em;
     }
 }
 /* Small devices (tablets, less than 768px) */
 @media (max-width: 767px) {
+    .jumbotron-custom{
+        background: url(../assets/background-content-phone.jpg)no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        background-size: cover;
+        -o-background-size: cover;
+    }
     .jumbotron-h1-custom {
         font-size: 1em;
     }
 }
 /* Small devices (tablets, 768px and up) */
 @media (max-width: 992px) {
+    .jumbotron-custom{
+        background: url(../assets/background-content-tablet.jpg)no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        background-size: cover;
+        -o-background-size: cover;
+    }
     .jumbotron-h1-custom {
         font-size: 1em;
     }
