--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body{
       width: 95%;
     }
     #navbar-p{
-      Text-align: center;
+      opacity: .8;
     }
 }
 /* Small devices (phones, less than 768px) */
@@ -149,7 +149,7 @@ body{
       width: 80%;
     }
     #navbar-p{
-      Text-align: center;
+      opacity: .8;
     }
 
 }
