--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body{
     -o-background-size: cover;
     color: white;
     text-align: justify;
+    text-shadow: 1px 1px 5px var(--drk-con);
 } 
 .jumbotron-h1-custom{
     font-family: 'Montserrat', sans-serif;
@@ -64,9 +65,11 @@ body{
 .btn-custom1{
   padding: 10px 20px;
   transition: opacity .2s;
+  background: var(--pri-col);
 }
 .btn-custom1:hover{
   text-decoration: none;
+  background: var(--pri-col);
   opacity: .9;
 }
 /* modifies the contents/Projects */
