--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ body{
 .jumbotron-h1-custom{
     font-family: 'Montserrat', sans-serif;
     color: white;
+    Text-align: left;
 }
 .btn-custom1{
   padding: 10px 20px;
@@ -129,6 +130,9 @@ body{
     .projects > .container > .row > a:hover > .content{
         transform: scale(1.01);
     }
+    .navbar-brand-custom{ 
+      font-size: .5em;
+}
 }
 /* Small devices (phones, less than 768px) */
 @media (min-width: 577px) and (max-width: 767px) {
@@ -164,6 +168,9 @@ body{
     .jumbotron > div > p{
         font-size: 1em;
         width: 90%;
+    }
+    .navbar-brand-custom{ 
+      font-size: .7em;
 }
 }
 
