--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ body{
     }
     .jumbotron-h1-custom{
         font-size: 2rem;
+        width: 95%;
     }
     .jumbotron > div > p{
       font-size: .8em;
@@ -160,13 +161,18 @@ body{
         -o-background-size:cover;
     }
     .jumbotron-h1-custom {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
+        width: 90%;
     }
     .jumbotron > div > p{
       font-size: 1em;
+      width: 90%;
     }
     .projects > .container > .row > a:hover > .content{
         transform: scale(1.01);
+    }
+    .buttons{
+        width: 90%;
     }
 }
 /* Small devices (tablets, 768px and up) */
@@ -180,6 +186,7 @@ body{
     }
     .jumbotron-h1-custom {
         font-size: 3.2rem;
+        width: 90%;
     }
     .jumbotron > div > p{
         font-size: 1em;
@@ -197,6 +204,7 @@ body{
 @media (min-width: 993px) and (max-width: 1200px) {
     .jumbotron-h1-custom {
         font-size: 3.5rem;
+        width: 80%;
     }
     .jumbotron > div > p{
         font-size: 1.2em;
@@ -212,6 +220,7 @@ body{
 @media (min-width: 1201px) {
     .jumbotron-h1-custom {
         font-size: 5rem;
+        width: 80%;
     }
     .jumbotron > div > p{
         font-size:  1.5em;
