--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,12 @@ body{
   padding: 10px 20px;
   transition: opacity .2s;
   background: var(--pri-col);
-  margin: 0 20px;
+  
 }
 #btn-custom2{
     padding: 10px 20px;
     background: var(--blk-bg);
     border: 2px solid var(--pri-col);
-    margin: 0 20px;
 }
 #btn-custom1:hover, #btn-custom2:hover{
   text-decoration: none;
@@ -150,6 +149,14 @@ body{
     .buttons{
         width: 95%;
     }
+    .buttons > a{
+        width: 110px; 
+        font-size: .8em;
+    }
+    #btn-custom1, #btn-custom2{
+        margin: 0 5px;
+        padding: 5px 10px;
+    }
 }
 /* Small devices (phones, less than 768px) */
 @media (min-width: 577px) and (max-width: 767px) {
@@ -174,6 +181,15 @@ body{
     .buttons{
         width: 90%;
     }
+    .buttons > a{
+        width: 140px; 
+        font-size: .7em;
+    }
+    #btn-custom1, #btn-custom2{
+        margin: 0 7px;
+        padding: 7px 10px;
+    }
+    
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 992px){
@@ -195,9 +211,17 @@ body{
     .buttons{
         width: 90%;
     }
+    .buttons > a{
+        width: 150px;
+        font-size: .9em;
+    }
+    #btn-custom1, #btn-custom2{
+        margin: 0 10px;
+        padding: 7px 10px;
+    }
     .navbar-brand-custom{ 
       font-size: .7em;
-}
+    }
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -213,7 +237,14 @@ body{
     .buttons{
         width: 80%;
     }
-    
+    .buttons > a{
+        width: 180px;
+        font-size: 1.1em;
+    }
+    #btn-custom1, #btn-custom2{
+        margin: 0 7px;
+        padding: 7px 10px;
+    }
 }
 
 /* Large devices (large desktops, 1200px and up) */
@@ -228,6 +259,13 @@ body{
     }
     .buttons{
         width: 80%;
+    }
+    .buttons > a{
+        width: 200px;
+    }
+    #btn-custom1, #btn-custom2{
+        margin: 0 7px;
+        padding: 7px 10px;
     }
     
 }
