--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 /* Set some variables*/ 
+html{
+    scroll-behavior: smooth;
+}
 :root {
     --pri-col: #0099ff;
     --drk-col: #154599;
