--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,11 @@ body{
     width: 100%; 
     margin-bottom: 20px;
 }
-
+/*contact-page*/
+#contact-page{
+    background: white;
+    height: 500px;
+}
 /* to remove the default margin in columns and padding in rows*/
 .row-no-padding {
     margin-left: 0;
